# py-multiaddr

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  HISTORY.rst  Makefile  README.rst  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  requirements.txt  requirements_dev.txt  ruff.toml  setup.cfg  setup.py  tox.ini
.github/claude/: readme.md  security-audit-report.md
.github/claude/tests/: README.md
.github/claude/tests/components/: AddressInput.test.tsx  InvoiceAddressForm.test.tsx
.github/claude/tests/services/: multiaddr-service.test.ts
.github/claude/tests/unit/: codecs.test.ts  multiaddr.test.ts  (+1 more)
.github/workflows/: claude-audit.yml  claude-generate.yml  claude-organize.yml  claude-pr-review.yml  claude-readme.yml  claude-test.yml
docs/: examples.rst  index.rst  installation.rst  multiaddr.codecs.rst  multiaddr.resolvers.rst  multiaddr.rst
examples/decapsulate/: README.md  decapsulate_example.py
examples/dns/: dns_examples.py  trio_dns_examples.py
examples/dnsaddr/: dnsaddr.py
examples/thin_waist/: README.md  thin_waist_example.py
multiaddr/: exceptions.py  multiaddr.py  protocols.py  transforms.py  utils.py
multiaddr/codecs/: __init__.py  cid.py  domain.py  fspath.py  ip4.py  ip6.py  onion.py  onion3.py  p2p.py  uint16be.py  utf8.py
multiaddr/resolvers/: __init__.py  dns.py
newsfragments/: 65.feature.rst  65.internal.rst  68.feature.rst  72.feature.rst  74.feature.rst  75.docs.rst  80.feature.rst  80.internal.rst
tests/: test_multiaddr.py  test_protocols.py  test_resolvers.py  test_thin_waist_addresses.py  test_transforms.py
(+1 files in other folders)
